--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body,
+p {
   color: white;
+  font-family: "Quicksand";
+}
+h1 {
+  padding: 10px;
+  color: orange;
+}
+.NavBar {
+  width: 25%;
+  height: 100vh;
+  background-color: #2b2b2b;
+  float: left;
+  align-items: flex-start;
+}
+.content {
+  width: 100vh;
+  height: 50px;
+  float: left;
+  text-align: center;
+  margin-left: 100px;
+}
+ul {
+  list-style-type: none;
+  margin-top: 100px;
+
+  padding: 0;
+  width: 100%;
+  background-color: #f1f1f1;
 }
 
-.App-link {
-  color: #61dafb;
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
 }
