--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,17 @@ p {
   color: white;
   font-family: "Quicksand";
 }
-h1,
-h3 {
-  padding: 10px;
+h1 {
   color: orange;
+}
+h3 {
+  color: white;
+  margin-top: 20px;
+  font-size: medium;
+}
+h4 {
+  padding: 10px;
+  color: white;
 }
 .NavBar {
   width: 25%;
@@ -27,7 +34,6 @@ h3 {
 ul {
   list-style-type: none;
   margin-top: 100px;
-
   padding: 0;
   width: 100%;
   background-color: #f1f1f1;
@@ -44,4 +50,27 @@ li a {
 li a:hover {
   background-color: #555;
   color: white;
+}
+
+.info-home {
+  width: 800px;
+  height: 450px;
+  border-radius: 5px;
+  margin-top: 50px;
+  background-color: #2b2b2b;
+}
+.row {
+  background-color: orange;
+  height: 400px;
+  border-radius: 5px;
+  width: 200px;
+  float: left;
+  margin-left: 50px;
+  margin-top: 25px;
+  box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
+}
+.bitcoin-img {
+  margin-top: 80px;
 }
