--- a/src/App.css
+++ b/src/App.css
@@ -18,25 +18,20 @@ h4 {
   color: white;
 }
 .NavBar {
-  width: 25%;
+  width: 20%;
   height: 100vh;
   background-color: #2b2b2b;
   float: left;
-  align-items: flex-start;
 }
-.content {
-  width: 100vh;
-  height: 50px;
-  float: left;
-  text-align: center;
-  margin-left: 100px;
-}
+
 ul {
   list-style-type: none;
   margin-top: 100px;
-  padding: 0;
-  width: 100%;
+  padding: 5;
+  width: 90%;
   background-color: #f1f1f1;
+  border-radius: 10px;
+  margin-left: 10px;
 }
 
 li a {
@@ -50,27 +45,45 @@ li a {
 li a:hover {
   background-color: #555;
   color: white;
+  border-radius: 5px;
 }
 
 .info-home {
-  width: 800px;
+  width: 40%;
   height: 450px;
   border-radius: 5px;
-  margin-top: 50px;
+  margin-top: 60px;
   background-color: #2b2b2b;
-}
-.row {
-  background-color: orange;
-  height: 400px;
-  border-radius: 5px;
-  width: 200px;
   float: left;
+
+  text-align: center;
   margin-left: 50px;
-  margin-top: 25px;
-  box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 7px 54px -7px rgba(0, 0, 0, 0.75);
 }
-.bitcoin-img {
-  margin-top: 80px;
+.comparison-container {
+  height: 300px;
+  width: 500px;
+  background-color: white;
+  box-shadow: 10px 3px 38px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 3px 38px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 3px 38px 0px rgba(0, 0, 0, 0.75);
+  margin-top: 60px;
+  border-radius: 10px;
+}
+.info-num {
+  float: right;
+  height: 100px;
+  width: 30%;
+  background-color: #2b2b2b;
+  margin-top: 60px;
+  border-radius: 5px;
+  margin-right: 50px;
+}
+.stats-home {
+  float: right;
+  height: 330px;
+  width: 30%;
+  background-color: #2b2b2b;
+  margin-top: 20px;
+  border-radius: 5px;
+  margin-right: 50px;
 }
