--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,11 @@ li a:hover {
   margin-top: 60px;
   background-color: #2b2b2b;
   float: left;
-
   text-align: center;
   margin-left: 50px;
+  box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
 }
 .comparison-container {
   height: 300px;
@@ -77,6 +79,9 @@ li a:hover {
   margin-top: 60px;
   border-radius: 5px;
   margin-right: 50px;
+  box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
 }
 .stats-home {
   float: right;
@@ -86,4 +91,7 @@ li a:hover {
   margin-top: 20px;
   border-radius: 5px;
   margin-right: 50px;
+  box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
 }
