--- a/src/CSS/Comp.css
+++ b/src/CSS/Comp.css
@@ -1,5 +1,8 @@
-.bar-chart {
-  height: 50vh;
+* {
+  margin: auto;
+}
+.chart-con {
+  height: 90vh;
   width: 40%;
   float: left;
   margin-left: 40px;
@@ -11,11 +14,9 @@
   -moz-box-shadow: 9px 15px 53px -15px rgba(0, 0, 0, 0.75);
 }
 .bar {
-  height: 80%;
-  width: 80%;
-  align-items: center;
+  height: 100%;
+  width: 100%;
   margin: auto;
-  margin-top: 30px;
 }
 .doughnut {
   float: right;
@@ -30,4 +31,9 @@
   margin-right: 40px;
 }
 .bubble-chart {
+  float: left;
+  height: 40%;
+  width: 80%;
+  margin-left: 51px;
+  margin-top: 10px;
 }
